--- a/src/Components/HomePage/HomeComponents/home.css
+++ b/src/Components/HomePage/HomeComponents/home.css
@@ -168,3 +168,15 @@
   color: #605e5e; 
   font-weight: bold;
 }
+
+/* Styles for Graph container */
+.graph-container {
+  margin: 0 auto;
+  position: absolute; /* Stay in place on scroll */
+  margin-left: auto;
+  top: 100px; /* Adjust buffer from the top */
+  left: 100px; /* Adjust buffer from the left */
+  z-index: 1000; /* Ensures logo stays above other content */
+  margin-right: auto; 
+  margin-left: auto;
+}
