--- a/src/Components/HomePage/HomeComponents/home.css
+++ b/src/Components/HomePage/HomeComponents/home.css
@@ -43,6 +43,16 @@
 .file-upload-button:hover {
   background-color: #e76772;
 }
+/* .search-upload-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.select-search {
+  width: 100%;
+} */
 
 .loaded-data {
   margin-left: 50px;
