--- a/src/Components/HomePage/SearchComponents/DisplayWallet/displaywallet.css
+++ b/src/Components/HomePage/SearchComponents/DisplayWallet/displaywallet.css
@@ -49,7 +49,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 1000px;
+    height: 400px;
   }
 
   @media (max-width: 800px) {
