--- a/src/Components/HomePage/SearchComponents/DisplayWallet/displaywallet.css
+++ b/src/Components/HomePage/SearchComponents/DisplayWallet/displaywallet.css
@@ -30,6 +30,7 @@
     width: calc(33.33% - 10px);
     margin: 5px;
     display: flex;
+    align-items: center;
     flex-direction: column;
   }
 
@@ -49,7 +50,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 1000px;
+    width: 100%;
+    min-width: 800px;
     height: 400px;
   }
 
