--- a/src/Components/HomePage/SearchComponents/DisplayWallet/MultipleWalletComponents/displaymultiplewallet.css
+++ b/src/Components/HomePage/SearchComponents/DisplayWallet/MultipleWalletComponents/displaymultiplewallet.css
@@ -40,7 +40,16 @@
   height: 400px;
 }
 
-canvas {
-    width: 100%;
-    height: 100%;
+.graph-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-height: 600px;
+  min-width: 800px;
+}
+
+.graph-container {
+  width: 50%;
+  padding: 20px;
+  box-sizing: border-box; /* Include padding in width calculation */
 }
