--- a/src/Components/HomePage/HomeComponents/home.css
+++ b/src/Components/HomePage/HomeComponents/home.css
@@ -66,7 +66,7 @@
   top: 10px;
   left: 0;
   right: 0;
-  padding: 0 10px; /* Add some padding on the sides */
+  padding: 0px; /* Add some padding on the sides */
   z-index: 1000; /* Ensures the header stays above other content */
 }
 
@@ -199,6 +199,21 @@
   }
 }
 
+/* Keep Webpage Flexed */
+.page-container {
+  width: 100%;
+  max-width: 100%; /* Prevents the container from extending beyond the viewport width */
+  margin: 0 auto; /* Centers the container */
+  padding: 0 20px; /* Adds some padding inside the container */
+  box-sizing: border-box; /* Includes padding in the element's total width and height */
+}
+.content-container {
+   /* max-width: 1600px;: Adjust this to suit the max width you want for your content */
+  margin: 0 auto; /* Centers the content container */
+  padding: 10px; /* Adds some padding */
+  margin-top: -40px;
+}
+
 /* Streams components */
 .streams-header-section {
   display: flex;
@@ -209,4 +224,5 @@
   margin-top: -5px;
   font-size: 25px;
 }
+
 
