--- a/src/Components/HomePage/SearchComponents/DisplayWallet/MultipleWalletComponents/displaymultiplewallet.css
+++ b/src/Components/HomePage/SearchComponents/DisplayWallet/MultipleWalletComponents/displaymultiplewallet.css
@@ -44,12 +44,24 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  max-height: 600px;
   min-width: 800px;
+  height: 600px;
 }
 
 .graph-container {
-  width: 50%;
-  padding: 20px;
+  width: 50%; /* Adjust this width as needed */
+  min-width: 300px;
+  max-height: 300px;
   box-sizing: border-box; /* Include padding in width calculation */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden; /* Prevent canvas overflow */
+  padding: 10px;
+}
+
+/* Add new CSS rule for canvas elements */
+.graph-container canvas {
+  width: 100%;
+  height: 100%;
 }
